// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/branch/get-updated getUpdatedPackageFiles() handles content change 1`] = `
Object {
  "artifactErrors": Array [],
  "parentBranch": undefined,
  "updatedArtifacts": Array [],
  "updatedPackageFiles": Array [
    Object {
      "contents": "some new content",
      "name": "undefined",
    },
  ],
}
`;

exports[`workers/branch/get-updated getUpdatedPackageFiles() handles empty 1`] = `
Object {
  "artifactErrors": Array [],
  "parentBranch": undefined,
  "updatedArtifacts": Array [],
  "updatedPackageFiles": Array [],
}
`;

exports[`workers/branch/get-updated getUpdatedPackageFiles() handles git submodules 1`] = `
Object {
  "artifactErrors": Array [],
  "parentBranch": undefined,
  "updatedArtifacts": Array [],
  "updatedPackageFiles": Array [
    Object {
      "contents": "existing content",
      "name": "undefined",
    },
  ],
}
`;

exports[`workers/branch/get-updated getUpdatedPackageFiles() handles lock file errors 1`] = `
Object {
  "artifactErrors": Array [
    Object {
      "lockFile": "composer.lock",
      "stderr": "some error",
    },
  ],
  "parentBranch": undefined,
  "updatedArtifacts": Array [],
  "updatedPackageFiles": Array [
    Object {
      "contents": "some new content",
      "name": "undefined",
    },
  ],
}
`;

exports[`workers/branch/get-updated getUpdatedPackageFiles() handles lock files 1`] = `
Object {
  "artifactErrors": Array [],
  "parentBranch": undefined,
  "updatedArtifacts": Array [
    Object {
      "contents": "some contents",
      "name": "composer.json",
    },
  ],
  "updatedPackageFiles": Array [
    Object {
      "contents": "some new content",
      "name": "undefined",
    },
  ],
}
`;

exports[`workers/branch/get-updated getUpdatedPackageFiles() handles lockFileMaintenance 1`] = `
Object {
  "artifactErrors": Array [],
  "parentBranch": undefined,
  "updatedArtifacts": Array [
    Object {
      "contents": "some contents",
      "name": "composer.json",
    },
  ],
  "updatedPackageFiles": Array [],
}
`;

exports[`workers/branch/get-updated getUpdatedPackageFiles() handles lockFileMaintenance error 1`] = `
Object {
  "artifactErrors": Array [
    Object {
      "lockFile": "composer.lock",
      "stderr": "some error",
    },
  ],
  "parentBranch": undefined,
  "updatedArtifacts": Array [],
  "updatedPackageFiles": Array [],
}
`;
